tests/fixtures/LatestTests/VariableDeclarationTests/errors/assignment_to_non_lvalue_bool.fg
/; EXPECT_ERROR: AssignmentToNonLValue
true = false

